Fix/batch/draft/0 (#2511)
* fix: tx translations

* fix: tx translations keys to lower case

* fix: ai prediction lang

* fix: mobile tx layout

* fix: deposit modal layout shift

* fix: remove inter font

* fix: remove inter font

---------

--- a/static/app.css
+++ b/static/app.css
@@ -125,10 +125,6 @@ a.disable-anchor {
   pointer-events: none;
 }
 
-.inter-font {
-  font-family: Inter;
-}
-
 p {
   font-style: normal;
   font-weight: 400; /* 400 / 500 */
